products/bluemap/clusters/feather-core/bluemap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap-cloudflare-tunnel
  annotations:
    # bluemap's integrated webserver serves plain HTTP on 8100
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: bluemap.onelitefeather.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap
                port:
                  number: 8100
